fix: icon button alignment

--- a/src/kit/Modal.module.scss
+++ b/src/kit/Modal.module.scss
@@ -51,6 +51,7 @@
     white-space: nowrap;
   }
   .buttons {
+    display: inline-flex;
     white-space: nowrap;
 
     > * {
